fix tsconfig paths to add @ character add user interface to export public api add common lib service template logic change expose name to auth component add commons lib shared mapping to mfe auth change remote name to mfeAuth remove host base styles fix common lib service import in mfe host

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "commons-lib": ["./projects/commons-lib/src/public-api.ts"]
+      "@commons-lib": ["./projects/commons-lib/src/public-api.ts"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
