add dotenv dependency add mfe auth url to host app refactor build commands add environment files add file replacements to angular json configuration add env rule to gitignore

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/mfe-host/src/environments/environment.ts",
+                  "with": "projects/mfe-host/src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
