--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,61 +4,81 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- main
+  - main
 
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  nodeVersion: "22.x"
+  npmRegistryURL: "https://registry.npmjs.org/"
+
+  # Define your apps here
+  appMfeHost:
+    - name: "mfe-host"
+      path: "projects/mfe-host"
+      artifactName: "mfe-host"
+      buildCommandDev: "npm run build:mfe-host -- --configuration=development"
+      buildCommandProd: "npm run build:mfe-host -- --configuration=production"
+  appMfeAuth:
+    - name: "mfe-auth"
+      path: "projects/mfe-auth"
+      artifactName: "mfe-auth"
+      buildCommandDev: "npm run build:mfe-auth -- --configuration=development"
+      buildCommandProd: "npm run build:mfe-auth -- --configuration=production"
+
 steps:
-    
-- task: NodeTool@0
-  inputs:
-    versionSpec: '20.x'
-  displayName: 'Install Node.js'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: $(nodeVersion)
+    displayName: "Install Node.js"
 
-- task: Cache@2
-  inputs:
-    key: '**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json'
-    path: '$(Build.SourcesDirectory)/node_modules'
-    cacheHitVar: CacheRestored
-  displayName: 'Cache Npm Dependencies'
+  - task: Cache@2
+    inputs:
+      key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
+      path: "$(Build.SourcesDirectory)/node_modules"
+      cacheHitVar: CacheRestored
+    displayName: "Cache Npm Dependencies"
 
-- script: |
-    npm install -g @angular/cli
-    npm install
-  condition: ne(variables['CacheRestored'], 'true')
-  displayName: 'Install dependencies'
+  - script: |
+      npm install -g @angular/cli
+      npm install
+    condition: ne(variables['CacheRestored'], 'true')
+    displayName: "Install dependencies"
 
-- script: npm run build-prod:mfe-host
-  displayName: 'Build angular mfe-host app'
+  - ${{ each app in variables.appMfeHost }}:
+  - script: |
+      export MFE_AUTH_URL=$(MFE_AUTH_URL)
+      ${{ app.buildCommandProd }}
+    displayName: "Build ${{ app.name }} Prod"
 
-# - task: PublishBuildArtifacts@1
-#   condition: always()
-#   continueOnError: true
-#   inputs:
-#     pathtoPublish: 'dist/mfe-host'
-#     artifactName: 'drop'
-#     publishLocation: 'Container'
-#   displayName: 'Publish build artifacts'
+  # - task: PublishBuildArtifacts@1
+  #   condition: always()
+  #   continueOnError: true
+  #   inputs:
+  #     pathtoPublish: 'dist/mfe-host'
+  #     artifactName: 'drop'
+  #     publishLocation: 'Container'
+  #   displayName: 'Publish build artifacts'
 
-- powershell: |
-    $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/mfe-host"
-    Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
+  - powermfe-host: |
+      $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/mfe-host"
+      Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
 
-# archive and publish artifacts
-- task: ArchiveFiles@2
-  displayName: Archive Build Artifacts
-  condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
-  continueOnError: true
-  inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/dist/mfe-host'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: $(Build.ArtifactStagingDirectory)/build/$(Build.BuildId).zip
-- task: PublishBuildArtifacts@1
-  displayName: Publish Build Artifacts
-  condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
-  continueOnError: true
-  inputs:
-    pathtoPublish: $(Build.ArtifactStagingDirectory)/build/$(Build.BuildId).zip
-    artifactName: 'drop'
+  # archive and publish artifacts
+  - task: ArchiveFiles@2
+    displayName: Archive Build Artifacts
+    condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
+    continueOnError: true
+    inputs:
+      rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist/mfe-host"
+      includeRootFolder: false
+      archiveType: "zip"
+      archiveFile: $(Build.ArtifactStagingDirectory)/build/$(Build.BuildId).zip
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Build Artifacts
+    condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
+    continueOnError: true
+    inputs:
+      pathtoPublish: $(Build.ArtifactStagingDirectory)/build/$(Build.BuildId).zip
+      artifactName: "drop"
