fix main pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,11 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-  - main
-
-paths:
-  exclude: # Exclude!
-    - "projects/*"
+  branches:
+    includes:
+      - main
+  paths:
+    exclude: # Exclude!
+      - "projects/*"
 
 pool:
   vmImage: ubuntu-latest
