--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,21 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
-- main
+  - main  # O la rama que uses para despliegue
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '20.x'
-  displayName: 'Install Node.js'
+# # Evita que otros pipelines se ejecuten en paralelo
+# concurrency:
+#   cancelInProgress: false  # no cancela pipelines anteriores
+#   group: angular-deployment-lock  # asegura que uno a la vez use este grupo
 
-- script: |
-    npm install angular-cli
-    npm run build:mfe-host
-  displayName: 'npm install and build'
+variables:
+  buildDir: dist  # carpeta donde Angular genera el build
+  nodeVersion: '18.x'
+
+stages:
+  - stage: Build
+    jobs:
+      - job: BuildAngularApp
+        steps:
+          - task: NodeTool@0
