Set up CI with Azure Pipelines
[skip ci]

--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -47,7 +47,7 @@ steps:
   - script: ${{ variables.appBuildCommandProd }}
     displayName: "Build ${{ variables.appName }} Prod"
     env:
-      MFE_AUTH_URL: $(MFE_AUTH_URL)
+      MS_API_URL: $(MS_API_URL)
 
   # - task: PublishBuildArtifacts@1
   #   condition: always()
