--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -7,12 +7,11 @@ trigger:
   branches:
     include:
       - main
+      - feature/*
+      - fix/*
   paths:
     include:
       - "mfe-host/*"
-
-pool:
-  vmImage: ubuntu-latest
 
 variables:
   nodeVersion: "22.x"
@@ -23,63 +22,60 @@ variables:
   appBuildCommandDev: "npm run build:mfe-host -- --configuration=development"
   appBuildCommandProd: "npm run build:mfe-host -- --configuration=production"
 
-steps:
-  - task: NodeTool@0
-    inputs:
-      versionSpec: $(nodeVersion)
-    displayName: "Install Node.js"
+stages:
+- stage: Build
+  jobs:
+    - job: install_dependencies
+      pool:
+        vmImage: ubuntu-latest
+      steps:
+        - task: NodeTool@0
+          inputs:
+            versionSpec: $(nodeVersion)
+          displayName: "Install Node.js"
 
-  - task: Cache@2
-    dependsOn:
-      - NodeTool@0
-    inputs:
-      key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
-      path: "$(Build.SourcesDirectory)/node_modules"
-      cacheHitVar: CacheRestored
-    displayName: "Cache Npm Dependencies"
+        - task: Cache@2
+          inputs:
+            key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
+            path: "$(Build.SourcesDirectory)/node_modules"
+            cacheHitVar: CacheRestored
+          displayName: "Cache Npm Dependencies"
 
-  - script: |
-      npm install -g @angular/cli
-      npm install
-    condition: ne(variables['CacheRestored'], 'true')
-    displayName: "Install dependencies"
+        - script: |
+            npm install -g @angular/cli
+            npm install
+          condition: ne(variables['CacheRestored'], 'true')
+          displayName: "Install dependencies"
 
-  - script: ${{ variables.appBuildCommandProd }}
-    displayName: "Build ${{ variables.appName }} Prod"
-    env:
-      MS_API_URL: $(MS_API_URL)
+        - script: ${{ variables.appBuildCommandProd }}
+          displayName: "Build ${{ variables.appName }} Prod"
+          env:
+            MS_API_URL: $(MS_API_URL)
 
-  # - task: PublishBuildArtifacts@1
-  #   condition: always()
-  #   continueOnError: true
-  #   inputs:
-  #     pathtoPublish: 'dist/mfe-host'
-  #     artifactName: 'drop'
-  #     publishLocation: 'Container'
-  #   displayName: 'Publish build artifacts'
+- stage: Dev_deploy
+  jobs:
+    - job: deploy_build
+      pool:
+        vmImage: ubuntu-latest
+      steps:
+        - powershell: |
+            $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
+            Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
 
-  - powershell: |
-      $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
-      Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
-
-  # archive and publish artifacts
-  - task: Cache@2
-    dependsOn:
-      - NodeTool@0
-    displayName: Archive Build Artifacts
-    condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
-    continueOnError: true
-    inputs:
-      rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist/${variables.appPath}"
-      includeRootFolder: false
-      archiveType: "zip"
-      archiveFile: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
-  - task: Cache@2
-    dependsOn:
-      - NodeTool@0
-    displayName: Publish Build Artifacts
-    condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
-    continueOnError: true
-    inputs:
-      pathtoPublish: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
-      artifactName: "drop"
+        # archive and publish artifacts
+        - task: Cache@2
+          displayName: Archive Build Artifacts
+          condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
+          continueOnError: true
+          inputs:
+            rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist/${variables.appPath}"
+            includeRootFolder: false
+            archiveType: "zip"
+            archiveFile: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
+        - task: Cache@2
+          displayName: Publish Build Artifacts
+          condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
+          continueOnError: true
+          inputs:
+            pathtoPublish: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
+            artifactName: "drop"
