--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -23,59 +23,61 @@ variables:
   appBuildCommandProd: "npm run build:mfe-host -- --configuration=production"
 
 stages:
-- stage: Build
-  jobs:
-    - job: install_dependencies
-      pool:
-        vmImage: ubuntu-latest
-      steps:
-        - task: NodeTool@0
-          inputs:
-            versionSpec: $(nodeVersion)
-          displayName: "Install Node.js"
+  - stage: Build
+    jobs:
+      - job: install_dependencies
+        pool:
+          vmImage: ubuntu-latest
+        steps:
+          - task: NodeTool@0
+            inputs:
+              versionSpec: $(nodeVersion)
+            displayName: "Install Node.js"
 
-        - task: Cache@2
-          inputs:
-            key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
-            path: "$(Build.SourcesDirectory)/node_modules"
-            cacheHitVar: CacheRestored
-          displayName: "Cache Npm Dependencies"
+          - task: Cache@2
+            inputs:
+              key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
+              path: "$(Build.SourcesDirectory)/node_modules"
+              cacheHitVar: CacheRestored
+            displayName: "Cache Npm Dependencies"
 
-        - script: |
-            npm install -g @angular/cli
-            npm install
-          condition: ne(variables['CacheRestored'], 'true')
-          displayName: "Install dependencies"
+          - script: |
+              npm install -g @angular/cli
+              npm install
+            condition: ne(variables['CacheRestored'], 'true')
+            displayName: "Install dependencies"
 
-        - script: ${{ variables.appBuildCommandProd }}
-          displayName: "Build ${{ variables.appName }} Prod"
-          env:
-            MS_API_URL: $(MS_API_URL)
+          - script: |
+              ${{ variables.appBuildCommandProd }}
+              ls
+            displayName: "Build ${{ variables.appName }} Prod"
+            env:
+              MS_API_URL: $(MS_API_URL)
 
-- stage: Dev_deploy
-  jobs:
-    - job: deploy_build
-      pool:
-        vmImage: ubuntu-latest
-      steps:
-        - powershell: |
-            $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
-            Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
+  - stage: Dev_deploy
+    jobs:
+      - job: deploy_build
+        pool:
+          vmImage: ubuntu-latest
+        steps:
+          - powershell: |
+              $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
+              Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
 
-        # archive and publish artifacts
-        - task: Cache@2
-          displayName: Archive Build Artifacts
-          condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
-          continueOnError: true
-          inputs:
-            rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist/${variables.appPath}"
-            includeRootFolder: false
-            archiveType: "zip"
-            archiveFile: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
-        - task: Cache@2
-          displayName: Publish Build Artifacts
-          condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
-          continueOnError: true
-          inputs:
-            pathtoPublish: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
-            artifactName: "drop"
+          # archive and publish artifacts
+          - task: Cache@2
+            displayName: Archive Build Artifacts
+            condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
+            continueOnError: true
+            inputs:
+              rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist/${variables.appPath}"
+              includeRootFolder: false
+              archiveType: "zip"
+              archiveFile: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
+          - task: Cache@2
+            displayName: Publish Build Artifacts
+            condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
+            continueOnError: true
+            inputs:
+              pathtoPublish: $(Build.ArtifactStagingDirectory)/build/${variables.appArtifactName}-$(Build.BuildId)-prod.zip
+              artifactName: "drop"
