--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -22,6 +22,7 @@ variables:
   appBuildCommandDev: "npm run build:mfe-host -- --configuration=development"
   appBuildCommandProd: "npm run build:mfe-host -- --configuration=production"
   tag: $(Build.BuildId)
+  DistExists: false
 
 stages:
   - stage: Build
@@ -55,25 +56,22 @@ stages:
             env:
               MS_API_URL: $(MS_API_URL)
 
+          - powershell: |
+              $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
+              Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
+
       - job: deploy_build
         dependsOn: install_dependencies
         pool:
           vmImage: ubuntu-latest
         steps:
-          - script: |
-              echo "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
-              ls
-          - powershell: |
-              $distExists = Test-Path -Path "$(Build.SourcesDirectory)/dist/${{ variables.appPath }}"
-              Write-Host "##vso[task.setvariable variable=DistExists]$distExists"
-          
           # copy artifacts
           - task: CopyFiles@2
             displayName: "Copy Files to: $(Build.ArtifactStagingDirectory)"
             inputs:
-              SourceFolder: 'dist'
-              Contents: '**'
-              TargetFolder: '$(build.artifactstagingdirectory)'
+              SourceFolder: "$(Build.SourcesDirectory)/dist"
+              Contents: "**"
+              TargetFolder: "$(build.artifactstagingdirectory)"
             condition: eq(variables['DistExists'], True) # If dist folder present then copy else skip
 
           # archive artifacts
