update cl command

--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -55,7 +55,7 @@ stages:
               path: $(NPM_CACHE_FOLDER)
 
           # Install dependencies
-          - script: npm clean install
+          - script: npm cia
             displayName: "Install dependencies"
 
           - script: ${{ variables.appBuildCommandProd }}
